tests/testdata/import_attributes/dynamic_error.out
error: Uncaught (in promise) TypeError: Attempted to load JSON module without specifying "type": "json" attribute in the import statement.
const data = await import("./data.json");
             ^
    at async [WILDCARD]dynamic_error.ts:1:14
